# id-erp

./: LICENSE  MANIFEST.in  README.md  hooks.py  modules.txt  setup.py
id_erp/: MANIFEST.in  README.md  __init__.py  hooks.py  pyproject.toml  setup.py
id_erp/config/: desktop.py
id_erp/controllers/: pricing.py
id_erp/doctype/product_configuration/: product_configuration.json
id_erp/id_erp/: __init__.py  hooks.py  modules.txt
id_erp/id_erp/config/: desktop.py
id_erp/id_erp/controllers/: copy_items.py  pricing.py
id_erp/id_erp/doctype/customer_group_rule/: customer_group_rule.json
id_erp/id_erp/doctype/optional_item/: optional_item.json
id_erp/id_erp/doctype/product_configuration/: product_configuration.json
id_erp/id_erp/doctype/work_milestone/: work_milestone.json
print_shop/: MANIFEST.in  README.md  hooks.py  setup.py
print_shop/print_shop/: hooks.py
print_shop/print_shop/config/: desktop.py
print_shop/print_shop/controllers/: pricing.py  sync.py
print_shop/print_shop/doctype/customer_group_rule/: customer_group_rule.json
print_shop/print_shop/doctype/optional_item/: optional_item.json
print_shop/print_shop/doctype/product_configuration/: product_configuration.json
print_shop/print_shop/tests/: test_pricing.py
print_shop/public/js/: sales_order.js
