[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "id_erp"
version = "0.0.1"
description = "Custom ERPNext extension for print business"
authors = [
    { name="idstudio AI", email="ai@idstudio.org" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "frappe"
]

[tool.setuptools]
packages = ["id_erp"]
include-package-data = true
